# arxivian

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  FEATURES.md  LANGFUSE_GUIDE.md  README.md  ROADMAP.md  docker-compose.coolify.yml  docker-compose.yml  justfile  litellm-implementation-plan.md
backend/: .dockerignore  .env.example  .env.test.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250123_add_users.py  20250125_add_user_id_to_conversations.py  20250206_add_user_preferences.py  20250207_celery_improvements.py  20260207_add_usage_counters.py  20260208_add_user_tiers.py  20260208_scope_reports_to_users.py  20260209_communal_knowledge_base.py  20260209_drop_reports_table.py  20260215_add_thinking_steps.py  20260219_add_citations_to_conversation_turns.py  20260219_add_pending_confirmation.py  20260219_readd_ingest_count.py  20260223_add_conversation_title.py
backend/src/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  main.py  tiers.py
backend/src/clients/: __init__.py  arxiv_client.py  base_llm_client.py  embeddings_client.py  instrumented_llm_client.py  langfuse_utils.py  litellm_client.py  openai_client.py  traced_llm_client.py  zai_client.py
backend/src/factories/: client_factories.py  service_factories.py
backend/src/middleware/: __init__.py  error_handler.py  logging.py
backend/src/models/: __init__.py  agent_execution.py  chunk.py  conversation.py  paper.py  report.py  task_execution.py  usage_counter.py  user.py
backend/src/repositories/: __init__.py  agent_execution_repository.py  chunk_repository.py  conversation_repository.py  paper_repository.py  report_repository.py  search_repository.py  task_execution_repository.py  usage_counter_repository.py  user_repository.py
backend/src/routers/: __init__.py  admin.py  conversations.py  feedback.py  health.py  ingest.py  ops.py  papers.py  preferences.py  reports.py  search.py  stream.py  tasks.py  users.py  webhooks.py
backend/src/schemas/: __init__.py  admin.py  common.py  conversation.py  errors.py  feedback.py  health.py  ingest.py  langgraph_state.py  ops.py  papers.py  preferences.py  reports.py  search.py  stream.py  tasks.py  users.py
backend/src/services/: auth_service.py  ingest_service.py  task_registry.py  title_service.py
backend/src/services/agent_service/: __init__.py  context.py  edges.py  graph_builder.py  prompts.py  service.py
backend/src/tasks/: __init__.py  cleanup_tasks.py  ingest_tasks.py  report_tasks.py  scheduled_tasks.py  signals.py  tracing.py  utils.py
backend/src/utils/: idempotency.py  logger.py  pdf_parser.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py
backend/tests/api/routers/: __init__.py  conftest.py  test_admin_router.py  test_conversations_router.py  test_feedback_router.py  test_health_router.py  test_ingest_router.py  test_ops_router.py  test_papers_router.py  test_preferences_router.py  test_reports_router.py  test_search_router.py  test_stream_router.py  test_tasks_router.py
backend/tests/e2e/: conftest.py
backend/tests/evals/: conftest.py  helpers.py  test_answer_quality_eval.py  test_citation_accuracy_eval.py  test_grading_eval.py  test_guardrail_eval.py  test_multi_turn_eval.py  test_out_of_scope_eval.py  test_router_eval.py
backend/tests/evals/fixtures/: answer_quality_scenarios.py  canned_data.py  citation_scenarios.py  grading_scenarios.py  guardrail_scenarios.py  multi_turn_scenarios.py  out_of_scope_scenarios.py  router_scenarios.py
backend/tests/evals/integration/: conftest.py  helpers.py  scenarios.py  seed.py  test_ingest_search_pipeline.py  test_multi_turn_persistence.py  test_sse_streaming.py  (+1 more)
backend/tests/integration/: conftest.py
backend/tests/test_repositories/: test_agent_execution_repository.py  test_chunk_repository.py
backend/tests/test_services/: conftest.py  test_ingest_service.py
backend/tests/unit/: conftest.py  test_celery_app.py
(+235 files in other folders)
