[project]
name = "arxivian"
version = "0.1.0"
description = "Arxivian - agentic RAG system for arXiv papers with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pgvector>=0.3.4",
    
    # AI/ML
    "litellm>=1.50.0",
    "openai>=1.54.3",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.5",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.45",
    
    # HTTP Client
    "httpx>=0.27.2",
    
    # PDF Processing
    "docling>=2.7.0",
    "pypdf>=5.0.1",
    
    # arXiv
    "arxiv>=2.1.3",
    
    # Utilities
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",
    
    # Logging
    "structlog>=24.4.0",

    # Observability
    "langfuse>=2.60.0,<3.0.0",

    # Authentication
    "clerk-backend-api>=1.0.0",
    "pyjwt[crypto]>=2.8.0",

    # Task Queue
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    
    # Development
    "ruff>=0.7.4",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.environment]
python-version = "3.13"
python-platform = "all"

[tool.ty.rules]
# Tool execute methods intentionally use explicit parameters for better DX
invalid-method-override = "warn"
# SQLAlchemy / Starlette / LiteLLM column-access false positives
invalid-argument-type = "warn"
invalid-assignment = "warn"
no-matching-overload = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests with mocked dependencies",
    "api: API router tests with mocked dependencies",
    "integration: Integration tests with real database",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    # App entrypoint and DI wiring - tested via integration/E2E
    "src/main.py",
    "src/dependencies.py",
    "src/factories/*",
    # HTTP layer - tested via API/integration tests
    "src/routers/*",
    "src/middleware/*",
    # Database models and repositories - tested via integration tests
    "src/models/*",
    "src/repositories/*",
    # LLM clients - thin wrappers around external SDKs, tested via integration
    "src/clients/*",
    # Pure Pydantic schemas with no logic - just data structures
    "src/schemas/errors.py",
    "src/schemas/feedback.py",
    "src/schemas/health.py",
    "src/schemas/papers.py",
    "src/schemas/search.py",
    "src/schemas/ops.py",
    # Utils that wrap external libraries - tested via integration
    "src/utils/pdf_parser.py",
    "src/utils/chunking_service.py",
    "src/utils/logger.py",
    # LangGraph orchestration and nodes - tested via integration/E2E
    "src/services/agent_service/service.py",
    "src/services/agent_service/graph_builder.py",
    "src/services/agent_service/context.py",
    "src/services/agent_service/nodes/generation.py",
    "src/services/agent_service/nodes/grading.py",
    "src/services/agent_service/nodes/out_of_scope.py",
    "src/services/agent_service/nodes/retrieval.py",
    "src/services/agent_service/nodes/rewrite.py",
    "src/services/agent_service/nodes/router.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 80
